<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    tools:context=".AboutActivity"
    tools:layout_editor_absoluteY="25dp">


    <Button
        android:id="@+id/button0"
        android:layout_width="0dp"
        android:layout_height="60dp"

        android:layout_marginBottom="17dp"

        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"

        android:alpha="0.75"
        android:background="@drawable/button_handler_0"
        android:drawableLeft="@drawable/return_icon"
        android:drawablePadding="-24dp"
        android:drawableTint="@drawable/button_text_handler_0"
        android:fontFamily="sans-serif"

        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/back_but_text"
        android:textColor="@drawable/button_text_handler_0"
        android:typeface="sans"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <ScrollView
        android:background="@color/colorPrimary"

        android:id="@+id/scrollView7"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="90dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editText3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/devs_title_text"
                android:textColor="#36D1D1" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dev_1_text"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dev_2_text"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dev_3_text"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dev_4_text"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dev_5_text"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dev_6_text"
                android:textColor="#ffffff" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/editText4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/mission_title_text"
                android:textColor="#36D1D1" />

            <EditText
                android:id="@+id/editText5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine"
                android:text="@string/lorem_ipsum_text"
                android:textColor="#ffffff" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>