<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    tools:context=".SettingsActivity"
    tools:layout_editor_absoluteY="25dp">

    <Button
        android:id="@+id/button0"

        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="13dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"

        android:alpha="0.75"
        android:background="@drawable/button_handler_set"
        android:drawableLeft="@drawable/config_icon"
        android:drawablePadding="-24dp"
        android:drawableTint="@drawable/button_text_handler_0"

        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/config_but_text"
        android:textColor="@drawable/button_text_handler_0"
        android:textSize="18sp"
        android:typeface="sans"
        android:fontFamily="sans-serif"

        app:layout_constraintBottom_toTopOf="@+id/button1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button1"

        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="13dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"

        android:alpha="0.75"
        android:background="@drawable/button_handler_set"
        android:drawableLeft="@drawable/contacts_icon"
        android:drawablePadding="-24dp"
        android:drawableTint="@drawable/button_text_handler_0"

        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/contact_but_text"
        android:textColor="@drawable/button_text_handler_0"
        android:textSize="18sp"
        android:typeface="sans"
        android:fontFamily="sans-serif"

        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button0"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button2"

        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="13dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"

        android:alpha="0.75"
        android:background="@drawable/button_handler_set"
        android:drawableLeft="@drawable/sound_icon"
        android:drawablePadding="-24dp"
        android:drawableTint="@drawable/button_text_handler_0"
        android:fontFamily="sans-serif"

        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/sound_but_text"
        android:textColor="@drawable/button_text_handler_0"
        android:textSize="18sp"

        android:typeface="sans"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button3"

        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="272dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"

        android:layout_marginStart="8dp"
        android:alpha="0.75"
        android:background="@drawable/button_handler_set"
        android:drawableLeft="@drawable/misc_icon"
        android:drawablePadding="-24dp"
        android:drawableTint="@drawable/button_text_handler_0"
        android:fontFamily="sans-serif"

        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/misc_but_text"
        android:textColor="@drawable/button_text_handler_0"
        android:textSize="18sp"

        android:typeface="sans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button4"

        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginBottom="17dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"

        android:alpha="0.75"
        android:background="@drawable/button_handler_0"
        android:drawableLeft="@drawable/return_icon"
        android:drawablePadding="-24dp"
        android:drawableTint="@drawable/button_text_handler_0"
        android:fontFamily="sans-serif"
        android:paddingLeft="15dp"

        android:paddingRight="15dp"
        android:text="@string/back_but_text"
        android:textColor="@drawable/button_text_handler_0"
        android:textSize="18sp"
        android:typeface="sans"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="87dp"
        android:layout_height="85dp"
        android:layout_marginBottom="100dp"

        android:src="@drawable/settings_icon_grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>